# omics-rag-playground

./: .gitignore  README.md  pyproject.toml
docs/: design-notes.md
notebooks/: 00_warmup_airway.ipynb  01_de_analysis_gse50760.ipynb  02_retrieval_scaffold.ipynb
src/omics_rag_playground/: annotation.py  embeddings.py  retrieval.py  vector_store.py
tests/: _capture_fixtures.py  test_annotation.py  test_retrieval.py
tests/fixtures/: pubmed_collective_authors_23128226.xml  pubmed_flat_abstract_24658644.xml  pubmed_no_doi_10802651.xml  pubmed_structured_abstract_29335749.xml
