[project]
name = "omics-rag-playground"
version = "0.1.0"
description = "AI-assisted workbench for interpreting bulk RNA-seq differential expression results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.87",
    "chromadb>=1.5.8",
    "gseapy==1.1",
    "mygene>=3.2.2",
    "pydeseq2>=0.5.4",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.0",
]
authors = [
    { name = "Emanuele Dri", email = "emanueledri1997@gmail.com" }
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omics_rag_playground"]

[tool.pytest.ini_options]
markers = [
    "network: marks tests that hit external APIs (deselect with '-m \"not network\"')",
]
